src/objects/Int_Agreement_Line_Asset__c.object
<CustomObject>
    <description>Int Junction Object- Agreement Lines &amp; Assets</description>
    <fields>
        <fullName>Agreement_Line_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Int Agreement Line Name</description>
        <label>Agreement Line Name</label>
        <referenceTo>Int_Agreement_Line__c</referenceTo>
        <relationshipLabel>Int Agreement Line Assets</relationshipLabel>
        <relationshipName>Int_Agreement_Line_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Line_Number__c</fullName>
        <description>Agreement Line Number</description>
        <label>Agreement Line Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <description>Agreement Number</description>
        <label>Agreement Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Source_System__c</fullName>
        <description>Agreement Source System</description>
        <label>Agreement Source System</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset Name</description>
        <label>Asset Name</label>
        <referenceTo>Int_Asset__c</referenceTo>
        <relationshipLabel>Int Agreement Line Assets</relationshipLabel>
        <relationshipName>Int_Agreement_Line_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Number__c</fullName>
        <description>Asset Number</description>
        <label>Asset Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Source_System__c</fullName>
        <description>Asset Source System</description>
        <label>Asset Source System</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <label>Int Agreement Line Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Line_Name__c</columns>
        <columns>Asset_Name__c</columns>
        <columns>Asset_Number__c</columns>
        <columns>Agreement_Source_System__c</columns>
        <columns>Asset_Source_System__c</columns>
        <columns>Agreement_Line_Number__c</columns>
        <columns>Agreement_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ALA-{0000000000}</displayFormat>
        <label>Agreement Line Asset Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreement Line Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>